Add patch for rustls-native-certs version 0.8.2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -232,3 +232,6 @@ panic = 'abort'
 strip = true
 #opt-level = 'z' # only have smaller size after strip
 rpath = true
+
+[patch.crates-io]
+rustls-native-certs = "0.8.2"
