--- a/Cargo.toml
+++ b/Cargo.toml
@@ -234,4 +234,5 @@ strip = true
 rpath = true
 
 [patch.crates-io]
-rustls-native-certs = "0.8.2"
+rustls-native-certs = { git = "https://github.com/rustls/rustls-native-certs", rev = "0.8.2" }
+
