--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libs/hbb_common"]
 	path = libs/hbb_common
-	url = https://github.com/Mark-Shternberg/hbb_common
+	url = https://github.com/Mark-Shternberg/hbb_common.git
